<resources>
    <string name="app_name">Cartão de Visitas</string>
    <string name="label_cartao_visitas">Cartão de Visita</string>
    <string name="label_description_new_card">Novo cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_cadastrar">Cadastrar</string>
    <string name="label_show_success">Cartão cadastrado com sucesso.</string>
    <string name="label_share">Compartilhar</string>
    <string name="sair_novo_cartao">Sair da tela novo cartão</string>
    <string name="mudar_cor">Mudar Cor</string>
</resources>